# serpens

./: pyproject.toml
src/serpens/: __init__.py
src/serpens/chapter/: chapter2.py  chapter5.py  chapter_3_dicts.py  functions.py
