[tool.poetry]
name = "serpens"
version = "0.1.0"
description = "A repo to contains all my learnings python code"
authors = ["Douglas Silva <dogusky@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.3.5"
pendulum = "^3.0.0"

[tool.poetry.scripts]
serpens = "src.serpens.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
